--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -7,10 +7,23 @@
         line-height: 21px;
         color: #fff;
     }
+    &_fz14-black {
+        font-size: 14px;
+        line-height: 21px;
+        color: #000;
+    }
     &_fz16 {
         font-size: 16px;
         line-height: 24px;
         color: #fff;
+    }
+    &_fz16-black {
+        font-size: 16px;
+        line-height: 24px;
+        color: #000;
+    }
+    &_fz36 {
+        font-size: 36px;
     }
     &_fz48 {
         font-size: 48px;
