--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,9 +15,17 @@
     margin: 0 auto;
 }
 
+.divider {
+    width: 60px;
+    height: 3px;
+    background-color: $main_color;
+    margin-top: 25px;
+}
+
 @import "blocks/promo";
 @import "blocks/title";
 @import "blocks/button";
 @import "blocks/sidepanel";
 @import "blocks/menu";
 @import "blocks/media";
+@import "blocks/aboutme";
